--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,26 @@
+.App {
+	margin: 0;
+	padding: 0;
+	background-color: #ff4b3a;
+	height: 100vh;
+}
+.logo {
+	margin-top: 5rem;
+	margin-left: 5rem;
+}
+h1 {
+	color: #fff;
+	font-size: 5rem;
+	margin-left: 5rem;
+}
 
+button {
+	display: block;
+	margin: 5rem auto 0;
+	border-radius: 30px;
+	background: #ffffff;
+	color: #ff460a;
+	width: 30rem;
+	height: 6rem;
+	outline: none;
+}
