--- a/client/src/App.css
+++ b/client/src/App.css
@@ -20,11 +20,18 @@ h1 {
 	border-radius: 30px;
 	background: #ffffff;
 	color: #ff460a;
-	width: 30rem;
+	width: 25rem;
 	height: 6rem;
 	outline: none;
 }
-
+.link_button {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-weight: 600;
+	font-size: 1.7rem;
+	line-height: 2rem;
+}
 .sign_in_up_container {
 	background-color: #bcbaba;
 	height: 100vh;
@@ -60,23 +67,27 @@ h1 {
 }
 
 input[type="text"],
-input[type="password"] {
+input[type="password"],
+input[type="email"] {
 	width: 100%;
 	height: 3rem;
 	outline: none;
 	border-top: none;
 	border-left: none;
 	border-right: none;
-	margin-bottom: 5rem;
+	margin-bottom: 3rem;
 	background-color: #bcbaba;
 }
 label {
-	margin-top: 1rem;
+	margin-top: 0.8rem;
 }
 
 .red {
 	background-color: #ff4b3a;
 	color: #fff;
+	font-weight: 600;
+	font-size: 1.7rem;
+	line-height: 2rem;
 }
 .mgTop_20 {
 	margin-top: 15rem;
