--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,6 @@
-.App {
-	margin: 0;
-	padding: 0;
+.getStarted_container {
 	background-color: #ff4b3a;
-	height: 100vh;
+	min-height: 100vh;
 }
 .logo {
 	margin-top: 5rem;
@@ -13,7 +11,10 @@ h1 {
 	font-size: 5rem;
 	margin-left: 5rem;
 }
-
+.start_image {
+	width: 100vw;
+	height: 40vh;
+}
 .button {
 	display: block;
 	margin: 5rem auto 0;
@@ -69,7 +70,7 @@ h1 {
 input[type="text"],
 input[type="password"],
 input[type="email"] {
-	width: 100%;
+	width: 80%;
 	height: 3rem;
 	outline: none;
 	border-top: none;
@@ -82,6 +83,7 @@ label {
 	margin-top: 0.8rem;
 }
 
+/*REUSABLE TEXT*/
 .red {
 	background-color: #ff4b3a;
 	color: #fff;
@@ -91,4 +93,25 @@ label {
 }
 .mgTop_20 {
 	margin-top: 15rem;
+}
+.mg_left_5 {
+	margin-left: 5rem;
+}
+.text_secondary {
+	font-weight: bold;
+	font-size: 2rem;
+	line-height: 41px;
+}
+
+.search_input {
+	border-radius: 1rem;
+	border: none;
+	padding: 0.5rem 2.5rem;
+}
+.search_icon {
+	width: 2rem;
+	position: relative;
+	top: 3.2rem;
+	left: 0.5rem;
+	margin-right: 1rem;
 }
