--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,6 +13,8 @@ html {
 }
 body {
 	margin: 0;
+	padding: 0;
+	height: 100%;
 	font-family: spaceGrotex, -apple-system, BlinkMacSystemFont, "Segoe UI",
 		"Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
 		"Helvetica Neue", sans-serif;
